<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_category_all"
            android:title="@string/menu_category_all" />
        <item
            android:id="@+id/nav_category_articles"
            android:title="@string/menu_category_articles" />
        <item
            android:id="@+id/nav_category_news"
            android:title="@string/menu_category_News" />
        <item
            android:id="@+id/nav_category_reviews"
            android:title="@string/menu_category_reviews" />
        <item
            android:id="@+id/nav_category_user"
            android:title="@string/menu_category_user" />
    </group>

    <item android:title="@string/menu_options">
        <menu>
            <item
                android:id="@+id/nav_add"
                android:icon="@drawable/ic_menu_add"
                android:title="@string/menu_add" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/menu_settings" />
        </menu>
    </item>
</menu>
