<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.andre.gomes.oliveira.gaminginsider.ui.ArticleActivity">
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        android:icon="@drawable/ic_menu_share"
        android:contentDescription="@string/menu_share_tooltip"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_link"
        android:orderInCategory="100"
        android:title="@string/action_link"
        android:icon="@drawable/ic_open_in_browser"
        android:contentDescription="@string/menu_link_tooltip"
        app:showAsAction="ifRoom" />
</menu>
